# responses

./: Cargo.toml  Justfile  LICENSE  PUBLIC_API.md  README.md  debug_test.rs
.claude/agents/: api-experience-optimizer.md  release-preparation-agent.md
examples/: structure.rs  text.rs  tools.rs
responses-macros/: Cargo.toml
responses-macros/src/: lib.rs
src/: azure.rs  builders.rs  client.rs  error.rs  functions.rs  lib.rs  messages.rs  options.rs  provider.rs  refusal.rs  request.rs  response.rs  schema.rs  strategy.rs  structure.rs  text.rs  types.rs  util.rs
src/judge/: assertions.rs  mod.rs
src/prompt/: conversation.rs  i18n.rs  markdown.rs  mod.rs  template.rs
src/providers/: azure.rs  mod.rs  openai.rs
tests/: basic_integration_test.rs  new_functionality_tests.rs  new_template_integration_test.rs  openai_provider_test.rs  test_strict_template_errors.rs
tests/fixtures/builder_test/: assistant.md  conversation_assistant.md  conversation_system.md  multi_var.md  override.md  structured_system.md  system.md
tests/fixtures/integration/: complex_system.md  multi_locale.md
tests/fixtures/integration/conversations/: assistant_response.md  expert_system.md
tests/fixtures/integration/errors/: mixed_template.md
tests/fixtures/integration/messages/: followup.md  system_prompt.md
tests/fixtures/integration/performance/: cached_template.md
tests/fixtures/integration/shared/: status_header.md
tests/fixtures/locales/ar/: system.yaml
tests/fixtures/locales/de/: system.yaml
tests/fixtures/locales/en/: system.yaml
tests/fixtures/locales/es/: system.yaml
tests/fixtures/locales/ja/: system.yaml
tests/fixtures/locales/pl/: system.yaml
tests/fixtures/template_vars/: test.md
tests/fixtures/templates/: invalid_yaml.md  simple.md  system_prompt.md
tests/fixtures/templates/advanced/: expert_mode.md
tests/fixtures/templates/basic/: simple_mode.md
tests/fixtures/templates/circular/: circular_a.md  circular_b.md
tests/fixtures/templates/conversations/: learning_session.md
tests/fixtures/templates/shared/: footer.md  (+3 more)
tests/fixtures/test_templates/: basic.md  greeting.md
(+4 files in other folders)
