[package]
name = "responses"
version = "0.1.0"
edition = "2024"
description = "Rust bindings to OpenAI's Responses API"
repository = "https://github.com/dprkh/responses"
license = "MIT"
keywords = ["openai", "azure", "llm", "ai", "structured-outputs"]
categories = ["api-bindings"]
readme = "README.md"

[dependencies]
anyhow = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["charset", "hickory-dns", "http2", "json", "rustls-tls-webpki-roots"] }
schemars = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.5"

[dev-dependencies]
dotenv = "0.15"
tokio = { version = "1.47", features = ["rt", "macros"] }
