[package]
name = "responses"
version = "0.2.0"
edition = "2024"
description = "Rust bindings for Azure OpenAI's Responses API"
repository = "https://github.com/dprkh/responses"
license = "MIT"
keywords = ["azure", "azure-openai", "llm", "ai", "structured-outputs"]
categories = ["api-bindings"]
readme = "README.md"

[workspace]
members = ["responses-macros"]

[dependencies]
anyhow = "1.0"
once_cell = "1.21"
regex = "1.10"
reqwest = { version = "0.12", default-features = false, features = ["charset", "hickory-dns", "http2", "json", "rustls-tls-webpki-roots"] }
responses-macros = { path = "responses-macros" }
schemars = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "2.0"
tokio = { version = "1.47", features = ["rt", "macros"] }
url = "2.5"

[dev-dependencies]
chrono = "0.4"
dotenv = "0.15"
tokio = { version = "1.47", features = ["rt", "macros"] }
