[package]
name = "responses-macros"
version = "0.2.0"
edition = "2024"
description = "Procedural macros for the responses crate"
repository = "https://github.com/dprkh/responses"
license = "MIT"
homepage = "https://github.com/dprkh/responses"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }